--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 
 <body>
 	<h2>Welcome, Please Login</h2>
-    	<form> 
+    	<form method = "POST"> 
     		<div class="container">
       			<label for="username">Username</label>
 			<br>
