--- a/templates/web.css
+++ b/templates/web.css
@@ -1,4 +1,77 @@
+html {
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
 body {
-    margin: 0;
-    background-color: #DBDBDA;
+    background-color: #60a9ff;
+    display: flex;
+    justify-content: center;
+    min-height: 160vh;
+
+}
+
+.panel {
+    background-color: white;
+    border-radius: 10px;
+    padding: 15px 25px;
+    width: 100%;
+    max-width: 960px;
+    max-height: 75%; 
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    text-transform: uppercase;
+	color: #016ff9;
+}
+.label {
+    color: #888;
+}
+
+input[type=text]{
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+     border-radius: 10px;
+     border: 1px solid #888;
+     color: #60a9ff;
+     width: 250px;
+     height: 30px;
+     padding-left: 10px;
+    }
+    
+input[type=text]:focus {
+     outline: none;
+     border: 1px solid #e1f1ff;
+     color: #888;
+}
+
+select {
+    border:1px solid #888;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+     border-radius: 10px;
+	height: 30px;
+    padding:2px;
+	color: #888;
+}
+
+.psd {
+-webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+     border-radius: 10px;
+     border: 1px solid #888;
+     color: #888;
+     width: 250px;
+     height: 30px;
+     padding-left: 10px;
+}
+
+.button{
+ border: 1px solid #888;
+    border-radius: 10px;
+    color: #348efe;
+    display: inline-block;
+    padding: 15px 35px;
+    text-decoration: none;
+    margin: 25px 0;
+    transition: background-color 200ms ease-in-out;
 }
