--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     	<title>Create account</title>
-	<link href = "web.css" rel = "stylesheet">
+		<link rel="stylesheet" href="{{ url_for('static', filename='web.css') }}">
 </head>
 
 <body>
