--- a/templates/MatchPage.html
+++ b/templates/MatchPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MatchPage</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
-    <link rel="stylesheet" href="MatchPage.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='MatchPage.css') }}">
 </head>
 
 <body>
