fixed icon paths

--- a/templates/MatchPage.html
+++ b/templates/MatchPage.html
@@ -13,7 +13,7 @@
     <div class="panel">
 
         <div class="match-category">
-            <img src="icons/icon1.png" alt="" class="people-img">
+            <img src="{{ url_for('static', filename='icons/icon1.png') }}" alt="" class="people-img">
             <h2 class="match-header">Personal Profile</h2>
             <ul class="match-features">
                 <li class="match-features-item">Share interesting information about yourself!</li>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="match-category">
-            <img src="icons/icon2.png" alt="" class="people-img">
+            <img src="{{ url_for('static', filename='icons/icon2.png') }}" alt="" class="people-img">
             <h2 class="match-header">Find a Friend</h2>
             <ul class="match-features">
                 <li class="match-features-item">Looking to build meaningful relationships?</li>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="match-category">
-            <img src="icons/icon3.png" alt="" class="people-img">
+            <img src="{{ url_for('static', filename='icons/icon3.png') }}" alt="" class="people-img">
             <h2 class="match-header">Find a Study Group</h2>
             <ul class="match-features">
                 <li class="match-features-item">Looking to learn together, grow together?<br></li>
