--- a/templates/MatchPage.html
+++ b/templates/MatchPage.html
@@ -31,7 +31,7 @@
                 <li class="match-features-item">Match with your peers based on mutual interests!</li>
             </ul>
             <!-- <span class="num-people"></span> -->
-            <a href="#/" class="match-button is-featured">Match</a>
+            <a href="/matches" class="match-button is-featured">Match</a>
         </div>
 
         <div class="match-category">
