--- a/templates/MatchPage.html
+++ b/templates/MatchPage.html
@@ -20,7 +20,7 @@
                 <li class="match-features-item">Help us better match with your peers!</li>
             </ul>
             <!-- <span class="num-people"></span> -->
-            <a href="{{ url_for('static', filename='editProfile.html') }}" class="match-button">Edit</a>
+            <a href="/editProfile" class="match-button">Edit</a>
         </div>
 
         <div class="match-category">
