--- a/templates/profileTemplate.html
+++ b/templates/profileTemplate.html
@@ -22,10 +22,8 @@
 			<br>
 			Matching Criteria: {{  user.Priority }}
 			<br>
-			Description: {{  user.getDescription }}
+			Description: {{  user.getDescription() }}
       		
-
-			
 	</form> 
 
 </body>
