--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -100,9 +100,14 @@
 			<br>
 
 
+            <br>
+            <label for="desc">Priority</label>
+			<input type="text" id="priority" name="priority" placeholder={{  user.getPriority() }}><br><br>
 			<br>
+
             <label for="desc">Description</label>
 			<input type="text" id="descrip" name="descrip" placeholder={{  user.getDescription() }}><br><br>
+
 
             <br>
       		<button type="submit" class="button">
