--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -13,7 +13,7 @@
 
             <label for="name">Name</label>
 			<br>
-      			<input type="text"  name="name" placeholder={{  user.getName() }}>
+      			<input type="text"  name="name" placeholder= "{{  user.getName() }}">
 			<br>
             
             <br>
@@ -32,7 +32,7 @@
 			<br>
 			<label for="major">Major</label>
 			<br>
-      			<input type="text" placeholder={{ user.getMajor() }} name="major" required>
+      			<input type="text" placeholder="{{ user.getMajor() }}" name="major" required>
         		<br>
                 <br>
             
@@ -112,7 +112,7 @@
 			<br>
 
             <label for="desc">Description</label>
-			<input type="text" id="descrip" name="descrip" placeholder={{  user.getDescription() }}><br><br>
+			<input type="text" id="descrip" name="descrip" placeholder="{{  user.getDescription() }}"><br><br>
 
 
             <br>
