--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -117,6 +117,12 @@
 
             <br>
 			<button type="submit" class="button">Save and Submit</button>
+
+			<button class="button">
+				<a href = "MatchPage"> 
+					Go Back
+				</a>
+				</button>
 			
 	</form> 
     </div>
