--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -119,7 +119,7 @@
 			<button type="submit" class="button">Save and Submit</button>
 
 			<button class="button">
-				<a href = "MatchPage"> 
+				<a href = "/MainPage"> 
 					Go Back
 				</a>
 				</button>
