--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -52,16 +52,16 @@
 			<label for="concen">Concentration</label>
 			<br>
       			<select name="concen" id="concen">
-    				<option value="cgd">Computer Game Development</option>
-    				<option value="seng">Software Engineering</option>
-    				<option value="tcs">Theoretical Computer Science</option>
-    				<option value="scomp">Scientific Computation</option>
-				<option value="hcint">Human-Computer Interactions</option>
-				<option value="cg">Computer Graphics</option>
-				<option value="is">Information Security</option>
-				<option value="ndc">Networks and Distributed Computing</option>
-				<option value="visa">Visualization and Analytics</option>
-				<option value="none">None</option>
+					<option value="Computer Game Development">Computer Game Development</option>
+                    <option value="Software Engineering">Software Engineering</option>
+                    <option value="Theoretical Computer Science">Theoretical Computer Science</option>
+                    <option value="Scientific Computation">Scientific Computation</option>
+                    <option value="Human-Computer Interactions">Human-Computer Interactions</option>
+                    <option value="Computer Graphics">Computer Graphics</option>
+                    <option value="Information Security">Information Security</option>
+                    <option value="Networks and Distributed Computing">Networks and Distributed Computing</option>
+                    <option value="Visualization and Analytics">Visualization and Analytics</option>
+                    <option value="None">None</option>
   			</select>
         		<br>
 		
