--- a/static/profileTemplate.css
+++ b/static/profileTemplate.css
@@ -54,3 +54,16 @@ body {
     align-items: center;
     min-height: 160vh;
 }
+
+.container {
+	background-color: white;
+    border-radius: 10px;
+    padding: 15px 25px;
+    width: 100%;
+    max-width: 960px;
+    /* max-height: 100%; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-transform: uppercase;
+}
