--- a/static/pTemplate.css
+++ b/static/pTemplate.css
@@ -55,15 +55,16 @@ body {
     min-height: 160vh;
 }
 
-.container {
-	background-color: white;
+.panel {
+    background-color: white;
     border-radius: 10px;
     padding: 15px 25px;
     width: 100%;
     max-width: 960px;
-    /* max-height: 100%; */
+    max-height: 50%; 
     display: flex;
     flex-direction: column;
     text-align: center;
     text-transform: uppercase;
+	color: #016ff9;
 }
