--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     	<title>Profile</title>
-	<link href = "{{ url_for('static', filename='edit.css') }}" rel = "stylesheet">
+	<link href = "{{ url_for('static', filename='editProfile.css') }}" rel = "stylesheet">
 </head>
 
 <body>
