--- a/templates/profileTemplate.html
+++ b/templates/profileTemplate.html
@@ -75,7 +75,22 @@
 			<div>
 				Description: {{  user.getDescription() }}
 			</div>
+			<br>
+			<br>
+			<button class="button">
+				<a href = "/MainPage"> 
+					Home
+				</a>
+				</button>
+			
+			<br>
+			<button class="button">
+				<a href = "/MatchPage"> 
+					Go Back to Matches
+				</a>
+			</button>
 		</div>
+
 
 </body>
 </html>
