--- a/static/pTemplate.css
+++ b/static/pTemplate.css
@@ -68,3 +68,14 @@ body {
     text-transform: uppercase;
 	color: #016ff9;
 }
+
+.button{
+    border: 1px solid #888;
+       border-radius: 10px;
+       color: #348efe;
+       display: inline-block;
+       padding: 15px 35px;
+       text-decoration: none;
+       margin: 25px 0;
+       transition: background-color 200ms ease-in-out;
+   }
