--- a/static/editProfile.css
+++ b/static/editProfile.css
@@ -41,6 +41,16 @@ input[type=text]:focus {
      color: #888;
 }
 
+select {
+    border:1px solid #888;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+     border-radius: 10px;
+	height: 30px;
+    padding:2px;
+	color: #888;
+}
+
 .button{
     border: 1px solid #888;
     border-radius: 10px;
