fixed white background in createAccount

--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     	<title>Create account</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='web.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='create.css') }}">
 </head>
 
 <body>
