--- a/templates/profileTemplate.html
+++ b/templates/profileTemplate.html
@@ -85,7 +85,7 @@
 			
 			<br>
 			<button class="button">
-				<a href = "/MatchPage"> 
+				<a href = "/matches"> 
 					Go Back to Matches
 				</a>
 			</button>
