--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -117,7 +117,7 @@
 			<br>
 
 
-			<label for="desc">Enter a description about yorself</label>
+			<label for="desc">Enter a description about yourself</label>
 			<input type="text" id="descrip" name="descrip"><br><br>
 			
 			<br>
