added chat button

--- a/templates/profileTemplate.html
+++ b/templates/profileTemplate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     	<title>Profile</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='pTemplate.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='proTemplate.css') }}">
 </head>
 
 
@@ -76,6 +76,13 @@
 				Description: {{  user.getDescription() }}
 			</div>
 			<br>
+			<br>
+			<button class="button">
+				<a href = "/chat"> 
+					Chat
+				</a>
+				</button>
+			
 			<br>
 			<button class="button">
 				<a href = "/MainPage"> 
