--- a/templates/profileTemplate.html
+++ b/templates/profileTemplate.html
@@ -78,7 +78,7 @@
 			<br>
 			<br>
 			<button class="button">
-				<a href = "/chat"> 
+				<a href = {{"/chat/"+username}}> 
 					Chat
 				</a>
 				</button>
