--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href = "{{ url_for('static', filename='chatty.css') }}" rel = "stylesheet">
+    <link href = "{{ url_for('static', filename='c.css') }}" rel = "stylesheet">
 </head>
 
 <body>
     <form method="POST">
-    <div class = "panel">
+    <div class = "panel"></div>
         <h1>Chat</h1>
 
-        
         <div>   
             <label for="msg"> Send a message </label> 
             <input type="text" name = "msg" id = "msg">
         </div>
 
-        <div>
-            {%for item in chat%}
-                {{item}}
-            {%endfor%}
 
+        <div class="container">
+            {%for item in chat%}
+            <p>
+                {{item}}
+            </p> 
+            {%endfor%}
         </div>
+          
 
         <div>   
             <button class="button">Submit</button>
